# ros2_needle_insertion_experiment

./: .gitignore  .gitmodules  README.md
docs/: index.md  system_diagram.txt
experiment_ros2bag/: .gitignore
experiment_ros2bag/experiment_ros2bag/: __init__.py  bag_file_parser.py  experiment_bag.py
experiment_ros2bag/scripts/: process_bag.py
insertion_point_publisher/: package.xml  setup.cfg  setup.py
insertion_point_publisher/config/: default_params.yaml
insertion_point_publisher/insertion_point_publisher/: insertion_point_publisher.py
insertion_point_publisher/launch/: insertion_point_publisher.launch.py  insertion_point_publisher_params.launch.py
insertion_robot_description/: CMakeLists.txt  package.xml
insertion_robot_description/controller/: insertion_robot_controller.yaml
insertion_robot_description/launch/: insertion_robot_upload.launch.py
insertion_robot_description/urdf/: insertion_robot.urdf
insertion_robot_description/worlds/: insertion_robot.rviz
insertion_robot_rqt/: package.xml  plugin.xml  setup.cfg  setup.py
insertion_robot_rqt/resource/: Publisher.ui  RobotControl.ui
insertion_robot_rqt/src/insertion_robot_rqt/: main.py  publisher.py  publisher_tree_model.py  publisher_tree_widget.py  publisher_widget.py  robot_control.py  robot_control_widget.py
insertion_robot_sim/: package.xml  setup.cfg  setup.py
insertion_robot_sim/controller/: insertion_robot_controller.yaml
insertion_robot_sim/insertion_robot_sim/: robot_sim.py
insertion_robot_sim/launch/: robot_sim.launch.py
needle_insertion_experiment/: package.xml  setup.cfg  setup.py
needle_insertion_experiment/launch/: needle.launch.py  record_data.launch.py  stage.launch.py  system.launch.py  system_bringup.launch.py
needle_insertion_experiment/resource/: NeedleInsertionExperiment.perspective
needle_insertion_robot2/: CMakeLists.txt  package.xml
needle_insertion_robot2/config/: default_params.yaml
needle_insertion_robot2/include/galil/: GalilController.h  NeedleInsertionRobot.h
needle_insertion_robot2/include/needle_insertion_robot/: insertion_robot_node.hpp
needle_insertion_robot2/launch/: robot.launch.py
needle_insertion_robot2/src/: GalilController.cpp  NeedleInsertionRobot.cpp  insertion_robot_node.cpp
